Fix font and SingleProject to locate manifest

--- a/.nuspec/Microsoft.Maui.Resizetizer.targets
+++ b/.nuspec/Microsoft.Maui.Resizetizer.targets
@@ -464,17 +464,15 @@
 
         <!-- WPF -->
         <ItemGroup Condition="'$(_ResizetizerIsWPFApp)' == 'True'">
-
             <Resource Include="@(_MauiFontCopied)" Condition="'@(_MauiFontCopied)' != ''">
                 <LogicalName>$([System.IO.Path]::GetFileName(%(_MauiFontCopied.Identity)))</LogicalName>
                 <Link>$([System.IO.Path]::GetFileName(%(_MauiFontCopied.Identity)))</Link>
             </Resource>
-
         </ItemGroup>
 
         <!-- Tizen -->
         <ItemGroup Condition="'$(_ResizetizerIsTizenApp)' == 'True'">
-            <TizenTpkUserIncludeFiles Include="$(IntermediateOutputPath)sp\fonts\*" TizenTpkSubDir="res\fonts\" />
+            <TizenTpkUserIncludeFiles Include="@(_MauiFontCopied)"  Condition="'@(_MauiFontCopied)' != ''" TizenTpkSubDir="res\fonts\" />
         </ItemGroup>
 
         <!-- iOS Only -->
@@ -522,6 +520,7 @@
         <!-- Tizen - Move splash images to a specific location -->
         <TizenSplashUpdator
             Condition="'$(_ResizetizerIsTizenApp)' == 'True'"
+            ManifestFile="$(TizenManifestFile)"
             IntermediateOutputPath="$(ResizetizerIntermediateOutputPath)"
             MauiSplashScreen="@(MauiSplashScreen)" />
 
