--- a/src/Compatibility/Core/src/Compatibility.csproj
+++ b/src/Compatibility/Core/src/Compatibility.csproj
@@ -60,7 +60,7 @@
     <ProjectReference Include="..\..\Android.FormsViewGroup\src\Compatibility.Android.FormsViewGroup.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetPlatformIdentifier)' == 'net6.0-tizen'" >
+  <ItemGroup Condition=" '$(TargetPlatformIdentifier)' == 'tizen'" >
     <Compile Include="$(TizenRoot)**\*.cs"></Compile>
     <EmbeddedResource Include="$(TizenRoot)Resources\*.resx" />
     <EmbeddedResource Include="$(TizenRoot)Resources\*.png" />
