--- a/src/Workload/Microsoft.NET.Sdk.Maui/WorkloadManifest.in.json
+++ b/src/Workload/Microsoft.NET.Sdk.Maui/WorkloadManifest.in.json
@@ -103,6 +103,21 @@
           "Microsoft.Maui.Essentials.Ref.win",
           "Microsoft.Maui.Essentials.Runtime.win"
       ]
+    },
+    "maui-tizen": {
+      "description": ".NET MAUI SDK for Tizen",
+      "extends": [
+        "maui-core",
+        "tizen"
+      ],
+      "packs": [
+          "Microsoft.Maui.Core.Ref.tizen",
+          "Microsoft.Maui.Core.Runtime.tizen",
+          "Microsoft.Maui.Controls.Ref.tizen",
+          "Microsoft.Maui.Controls.Runtime.tizen",
+          "Microsoft.Maui.Essentials.Ref.tizen",
+          "Microsoft.Maui.Essentials.Runtime.tizen"
+      ]
     }
   },
   "packs": {
@@ -130,6 +145,10 @@
       "kind": "framework",
       "version": "@VERSION@"
     },
+    "Microsoft.Maui.Core.Ref.tizen": {
+      "kind": "framework",
+      "version": "@VERSION@"
+    },
     "Microsoft.Maui.Core.Runtime.any": {
       "kind": "framework",
       "version": "@VERSION@"
@@ -147,6 +166,10 @@
       "version": "@VERSION@"
     },
     "Microsoft.Maui.Core.Runtime.win": {
+      "kind": "framework",
+      "version": "@VERSION@"
+    },
+    "Microsoft.Maui.Core.Runtime.tizen": {
       "kind": "framework",
       "version": "@VERSION@"
     },
@@ -170,6 +193,10 @@
       "kind": "framework",
       "version": "@VERSION@"
     },
+    "Microsoft.Maui.Controls.Ref.tizen": {
+      "kind": "framework",
+      "version": "@VERSION@"
+    },
     "Microsoft.Maui.Controls.Runtime.any": {
       "kind": "framework",
       "version": "@VERSION@"
@@ -187,6 +214,10 @@
       "version": "@VERSION@"
     },
     "Microsoft.Maui.Controls.Runtime.win": {
+      "kind": "framework",
+      "version": "@VERSION@"
+    },
+    "Microsoft.Maui.Controls.Runtime.tizen": {
       "kind": "framework",
       "version": "@VERSION@"
     },
@@ -214,6 +245,10 @@
       "kind": "framework",
       "version": "@VERSION@"
     },
+    "Microsoft.Maui.Essentials.Ref.tizen": {
+      "kind": "framework",
+      "version": "@VERSION@"
+    },
     "Microsoft.Maui.Essentials.Runtime.any": {
       "kind": "framework",
       "version": "@VERSION@"
@@ -231,6 +266,10 @@
       "version": "@VERSION@"
     },
     "Microsoft.Maui.Essentials.Runtime.win": {
+      "kind": "framework",
+      "version": "@VERSION@"
+    },
+    "Microsoft.Maui.Essentials.Runtime.tizen": {
       "kind": "framework",
       "version": "@VERSION@"
     },
