[Tizen] Update Microsoft.NET.Sdk.Maui/WorkloadManifest

--- a/src/Workload/Microsoft.NET.Sdk.Maui/WorkloadManifest.in.json
+++ b/src/Workload/Microsoft.NET.Sdk.Maui/WorkloadManifest.in.json
@@ -107,7 +107,7 @@
     "maui-tizen": {
       "description": ".NET MAUI SDK for Tizen",
       "extends": [
-        "maui-core",
+        "maui-blazor",
         "tizen"
       ],
       "packs": [
