--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -15,6 +15,7 @@
     <MicrosoftMacCatalystSdkPackageVersion>15.2.302-preview.14.116</MicrosoftMacCatalystSdkPackageVersion>
     <MicrosoftmacOSSdkPackageVersion>12.1.302-preview.14.116</MicrosoftmacOSSdkPackageVersion>
     <MicrosofttvOSSdkPackageVersion>15.2.302-preview.14.116</MicrosofttvOSSdkPackageVersion>
+    <SamsungTizenSdkPackageVersion>7.0.100-preview.13.30</SamsungTizenSdkPackageVersion>
     <!-- emsdk -->
     <MicrosoftNETWorkloadEmscriptenManifest60100PackageVersion>6.0.2</MicrosoftNETWorkloadEmscriptenManifest60100PackageVersion>
     <!-- wasdk -->
@@ -52,5 +53,6 @@
     <DotNetEmscriptenManifestVersionBand>6.0.200</DotNetEmscriptenManifestVersionBand>
     <DotNetAndroidManifestVersionBand>6.0.200</DotNetAndroidManifestVersionBand>
     <DotNetMaciOSManifestVersionBand>6.0.200</DotNetMaciOSManifestVersionBand>
+    <DotNetTizenManifestVersionBand>6.0.200</DotNetTizenManifestVersionBand>
   </PropertyGroup>
 </Project>
