--- a/src/DotNet/Dependencies/Workloads.csproj
+++ b/src/DotNet/Dependencies/Workloads.csproj
@@ -10,5 +10,6 @@
     <PackageDownload Include="Microsoft.NET.Sdk.iOS.Manifest-$(DotNetMaciOSManifestVersionBand)"         Version="[$(MicrosoftiOSSdkPackageVersion)]" />
     <PackageDownload Include="Microsoft.NET.Sdk.tvOS.Manifest-$(DotNetMaciOSManifestVersionBand)"        Version="[$(MicrosofttvOSSdkPackageVersion)]" />
     <PackageDownload Include="Microsoft.NET.Sdk.macOS.Manifest-$(DotNetMaciOSManifestVersionBand)"       Version="[$(MicrosoftmacOSSdkPackageVersion)]" />
+    <PackageDownload Include="Samsung.NET.Sdk.Tizen.Manifest-$(DotNetTizenManifestVersionBand)"       Version="[$(SamsungTizenSdkPackageVersion)]" />
   </ItemGroup>
 </Project>
