[Tizen] Move package version into Versions.props

--- a/eng/Microsoft.Extensions.targets
+++ b/eng/Microsoft.Extensions.targets
@@ -105,5 +105,9 @@
         Update="Microsoft.Web.WebView2"
         Version="$(_MicrosoftWebWebView2Version)"
     />
+    <PackageReference
+        Update="Tizen.UIExtensions.ElmSharp"
+        Version="$(TizenUIExtensionsVersion)"
+    />
   </ItemGroup>
 </Project>
