--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -43,6 +43,7 @@
     <_HarfBuzzSharpVersion>2.8.2-preview.232</_HarfBuzzSharpVersion>
     <_SkiaSharpNativeAssetsVersion>0.0.0-commit.ccc64cdd4950b5056444be8b915929500f548fee.232</_SkiaSharpNativeAssetsVersion>
     <MicrosoftTemplateEngineTasksVersion>7.0.100-preview.2.22102.8</MicrosoftTemplateEngineTasksVersion>
+    <TizenUIExtensionsVersion>0.6.0-pre1</TizenUIExtensionsVersion>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Match the first three version numbers and append 00 -->
